--- a/templates/index.html
+++ b/templates/index.html
@@ -19,5 +19,19 @@
         </div>
     </form>
 
+    {% for todo in todo_list%}
+        <p> {{todo.id}} {{todo.title}} </p>
+
+        {% if todo.complete == False %}
+            <span>Not Complete</span>
+        {% else %}
+            <span>Completed</span>
+        {% endif %}
+
+        <a href="">Update</a>
+        <a href="">Delete</a>
+
+    {%endfor%}
+
 </body>
 </html>
