--- a/templates/index.html
+++ b/templates/index.html
@@ -4,34 +4,38 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script>
     <title>TASKS APP</title>
 </head>
 <body>
     
-    <h1>Tasks</h1>
+    <div style="margin-top: 75px;" class="ui container">
+        <h1  class="ui center aligned header">Tasks</h1>
 
-    <form action="">
-        <div>
-            <label for="title">Tasks title</label>
-            <input type="text" name="title" placeholder="Enter Tasks..">
-            <br>
-            <button type="submit">Add</button>
+        <form class="ui form" action="/add" method="post">
+            <div class="field">
+                <label for="title">Tasks title</label>
+                <input type="text" name="title" placeholder="Enter Tasks..">
+                <br>
+                <button class="ui blue button" type="submit">Add</button>
+            </div>
+        </form>
+
+        {% for todo in todo_list%}
+        <div class="ui segment">
+            <p class="ui big header"> {{todo.id}} {{todo.title}} </p>
+
+            {% if todo.complete == False %}
+                <span class="ui gray label">Incomplete</span>
+            {% else %}
+                <span class="ui green label">Completed</span>
+            {% endif %}
+
+            <a class=" ui blue button" href="/update/{{ todo.id }}">Update</a>
+            <a class="ui red button" href="/delete/{{ todo.id }}">Delete</a>
         </div>
-    </form>
-
-    {% for todo in todo_list%}
-        <p> {{todo.id}} {{todo.title}} </p>
-
-        {% if todo.complete == False %}
-            <span>Not Complete</span>
-        {% else %}
-            <span>Completed</span>
-        {% endif %}
-
-        <a href="">Update</a>
-        <a href="">Delete</a>
-
-    {%endfor%}
-
+        {%endfor%}
+    </div>
 </body>
 </html>
